<resources>
    <string name="app_name">Math &amp; Logic Quiz</string>
    <string name="string0">Reset</string>
    <string name="string1">Play</string>
    <string name="string2">Levels</string>
    <string name="string3">Exit</string>
    <string name="string4">There is no ads yet!</string>
    <string name="string5">Privacy Policy</string>
    <string name="string6">Terms and Conditions</string>
    <string name="string7">Rate</string>
    <string name="string8">Answer</string>
    <string name="lvl_1">3,5,?,9</string>
    <string name="lvl_2">10,?,20,25</string>
    <string name="lvl_3">\?,49,56,63</string>
    <string name="lvl_4">4=32\n6\=48\n?\=64\n2=16</string>
    <string name="lvl_5">17=29\n\u00206=18\n20=32\n\u00205=\u0020?</string>
    <string name="lvl_6">\?,33,46,59</string>
    <string name="lvl_7">4x3=16\n5x6=35\n8x2=\u0020?\n7x1=14</string>
    <string name="lvl_8">12,?,30,42 </string>
    <string name="lvl_9">1,6,10,?</string>
    <string name="lvl_10">36=9\n28=7\n16=\?\n\u00208=2</string>
    <string name="lvl_11">2x2+2x2+2=?</string>
    <string name="lvl_12">-7+7x7+7=?</string>
    <string name="lvl_13">6x(-1+2x4)-13=?</string>
    <string name="lvl_14">\?-8+?x8+6=16</string>
    <string name="lvl_15">26x11=26\n13x 2=26\n33x 3=99\n15x10=\u0020?</string>
    <string name="lvl_17">06,68,88,?,98 </string>
    <string name="lvl_18">x-y=60 \nx/y=?\u0020 \nx+y=100</string>
    <string name="lvl_19">12-9/3+2x3=?</string>
    <string name="lvl_20">16/2x3/2=?</string>
    <string name="lvl_21">3=21\n7=42\n6=\u0020?\n5=15</string>
    <string name="lvl_22">2\t5\t4\n\t2\t\n4\t?\t6</string>
    <string name="lvl_23">7 3 4\n? 9 5\n2 0 3</string>
    <string name="lvl_24">4,3=11\n7,2=11\n8,5=37\n6,4=\u0020?</string>
    <string name="lvl_25">73,28=20\n15,33=12\n64,44=\u0020?\n51,\u00209=15</string>
    <string name="lvl_26">2,?,13,36,104</string>
    <string name="lvl_27">5\n9\n16\n29\n?</string>
    <string name="lvl_28">6,9,15,27,?</string>
    <string name="lvl_30">5 \t 4 \t 7\n7 \t ? \t 2\n12 \t6 \t 6</string>
    <string name="lvl_31">3749=1\n7173=0\n2875=?\n6542=3</string>
    <string name="lvl_32">3,?,14,21,29</string>
    <string name="lvl_33">7,10,12,13\n?,18,20,21</string>
    <string name="lvl_34">6,7,9,13,?,37</string>
    <string name="lvl_37">22,33,?,61,78</string>
    <string name="lvl_39">6820=4\n5532=?\n7615=1\n3948=3</string>
    <string name="lvl_41">1,1,2,3,5,?</string>
    <string name="lvl_43">13-\u00204=17\n23+16=\u00207\n7\u0020/\u00208=\u0020?\n24x\u00203=\u00208</string>
    <string name="lvl_44">25,36,?,64,81</string>
    <string name="lvl_45">3=12\n6=\u0020?\n5=30\n8=72</string>
    <string name="lvl_47">\?,XV,XVI,XVII </string>
    <string name="lvl_48">17,19,?,29</string>
    <string name="lvl_51">364231=0\n106133=1\n513711=?\n135713=2</string>
    <string name="lvl_52">4,2=18\n7,6=\u0020?\n3,5=14\n1,7=\u00208</string>
    <string name="lvl_53">13,13,25,23\n\n\u00208,19,\u0020?,31</string>
    <string name="lvl_56">36=69\n15=56\n72=\u0020?\n24=46</string>
    <string name="lvl_57">16,\u002025=\u00209\n49,\u002016=13\n36,169=19\n64,\u002025=\u0020?</string>
    <string name="lvl_60">5 \t 10 \t 3\n8 \t 11 \t 1\n2 \t \u00207 \t 3\n6 \t \u0020? \t 4</string>
    <string name="lvl_62">9,36,?,144</string>
    <string name="lvl_64">631=352\n434=731\n561=903\n283=4?6</string>
    <string name="lvl_65">173=73\n242=92\n293=\u0020?\n314=64"</string>
    <string name="lvl_67">3,6,5,?,8,11,19</string>
    <string name="lvl_69">(17+3)/5=?\u0020\n\n12x3/18=?\n\n3x8-6x4=?</string>
    <string name="lvl_71">1,8,?,64,125</string>
</resources>
